--- a/app.json
+++ b/app.json
@@ -21,8 +21,8 @@
       "required": true
     }
   },
-  "website": "https://github.com/ marryjone3 /vlessheroku",
-  "repository": "https://github.com/ marryjone3 /vlessheroku",
+  "website": "https://github.com/BHY68TU9/jongni",
+  "repository": "https://github.com/BHY68TU9/jongni",
   "stack": "container",
   "features": [
     "runtime-dyno-metadata"
